@@ -4,6 +4,15 @@ Version 1.6.16
 
 2012-03-05 Fabrice Fontaine <fabrice.fontaine(at)orange.com>
 
+	SF Bug Tracker id 3496942 - Memory leak in config_description_doc
+
+	Submitted: Fabrice Fontaine ( ffontaine ) - 2012-03-05 01:55:54 PST
+
+	element was not freed if membuffer_append_str(&url_str, "http://") does
+	not return 0. Moreover addNew was not used.
+
+2012-03-05 Fabrice Fontaine <fabrice.fontaine(at)orange.com>
+
 	SF Bug Tracker id 3496938 - Missing structures initialisation in some functions
 
 	Submitted: Fabrice Fontaine ( ffontaine ) - 2012-03-05 01:31:16 PST
